--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,28 @@
 @import "style/vars";
+@import "style/accordion";
+@import "style/masterForm";
+html, body, #root-app{
+  height: 100%;
+  margin: 0;
+}
+#root-app{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+body{
+  background-color:#d2e1ff ;
+  font-family: Arial, Helvetica, sans-serif;
+}
+button:focus {outline:0;}
+.actionButton{
+  background-image: linear-gradient(#404bb6, #7563d3);
+  float: right;
+  padding:5px 40px;
+  color:#FFF;
+  border-radius:10px;
+  border:0;
+  text-shadow: 0px 1px #000;
+
+}
